# Pepper_Hermes_Agent_Scheduler

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
src/pepper/: __main__.py  config.py  time_util.py
src/pepper/cascade/: block.py  constraints.py  cost.py  engine.py  gate.py
src/pepper/db/: connection.py  migrations.py
src/pepper/domain/: item.py
src/pepper/integration/: hermes.py
src/pepper/learning/: bias.py  estimator.py  habits.py  seeds.py
src/pepper/load/: gauge.py
src/pepper/mcp/: schemas.py  server.py
src/pepper/ml/: adaptation.py  classifier.py  embedder.py  vec_math.py
src/pepper/objectives/: engine.py
src/pepper/persons/: resolution.py
src/pepper/planner/: allocation.py  projection.py  (+1 more)
tests/: conftest.py  test_adaptation.py  test_allocation.py  test_bias.py  test_briefing_service.py  test_cascade_service.py  test_classification_service.py  test_classifier.py  test_connection.py  test_constraints.py  test_cost.py  test_engine.py  test_estimator.py  test_expand.py  test_gate.py  test_hermes_seam.py  test_item_model.py  test_item_repo.py  test_load_gauge.py  test_mark_progress.py  test_migrations.py  test_objectives.py  test_observation_repo.py  test_onboarding.py  test_person_repo.py  test_person_resolution.py  test_priority_modifiers.py  test_priority_service.py  test_projection.py  test_projects.py  test_recurrence.py  test_reminder_service.py  test_robustness.py  test_rules.py  test_schedule_service.py  test_scores.py  test_seeds.py  test_server.py  test_set_deadline.py  test_slots.py  (+8 more)
(+35 files in other folders)
