[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pepper"
version = "0.1.0"
description = "Pepper's scheduling brain — MCP server"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.0", "pydantic>=2.5", "fastembed>=0.3"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/pepper"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
